tests/fixtures/negative/style/MaxChainedCallsOnSameLine.kt
package style

fun example() {
    val result = listOf(1, 2, 3).filter({ true }).map({ it })
}
